@@ -26,6 +26,9 @@ Core and Builtins
 Library
 -------
 
+- Issue5504 - ctypes should now work with systems where mmap can't be
+  PROT_WRITE and PROT_EXEC.
+
 - Fix Issue8280 - urllib2's Request method will remove fragements in the url.
   This is how it is supposed to work, wget and curl do the same.  Previous
   behavior was wrong.
